@@ -1,0 +1,10 @@
+# version
+
+module Gluon
+  VERSION = '0.0.0'
+end
+
+# Local Variables:
+# mode: Ruby
+# indent-tabs-mode: nil
+# End:
