@@ -30,21 +30,21 @@ module Gluon::Test
       ]
       dispatcher = Gluon::Dispatcher.new(url_map)
 
-      assert_equal(Root, dispatcher.look_up(''))
-      assert_equal(Root, dispatcher.look_up('/'))
-      assert_equal(Root, dispatcher.look_up('/index.html'))
+      assert_equal([ Root, '' ],            dispatcher.look_up(''))
+      assert_equal([ Root, '/' ],           dispatcher.look_up('/'))
+      assert_equal([ Root, '/index.html' ], dispatcher.look_up('/index.html'))
 
-      assert_equal(Foo, dispatcher.look_up('/foo'))
-      assert_equal(Foo, dispatcher.look_up('/foo/'))
-      assert_equal(Foo, dispatcher.look_up('/foo/something'))
+      assert_equal([ Foo, '' ],           dispatcher.look_up('/foo'))
+      assert_equal([ Foo, '/' ],          dispatcher.look_up('/foo/'))
+      assert_equal([ Foo, '/something' ], dispatcher.look_up('/foo/something'))
 
-      assert_equal(Bar, dispatcher.look_up('/foo/bar'))
-      assert_equal(Bar, dispatcher.look_up('/foo/bar/'))
-      assert_equal(Bar, dispatcher.look_up('/foo/bar/something'))
+      assert_equal([ Bar, '' ],           dispatcher.look_up('/foo/bar'))
+      assert_equal([ Bar, '/' ],          dispatcher.look_up('/foo/bar/'))
+      assert_equal([ Bar, '/something' ], dispatcher.look_up('/foo/bar/something'))
 
-      assert_equal(Baz, dispatcher.look_up('/baz'))
-      assert_equal(Baz, dispatcher.look_up('/baz/'))
-      assert_equal(Baz, dispatcher.look_up('/baz/something'))
+      assert_equal([ Baz, '' ],           dispatcher.look_up('/baz'))
+      assert_equal([ Baz, '/' ],          dispatcher.look_up('/baz/'))
+      assert_equal([ Baz, '/something' ], dispatcher.look_up('/baz/something'))
     end
 
     def test_not_found
@@ -57,9 +57,9 @@ module Gluon::Test
       assert_equal(nil, dispatcher.look_up('/'))
       assert_equal(nil, dispatcher.look_up('/index.html'))
 
-      assert_equal(Foo, dispatcher.look_up('/foo'))
-      assert_equal(Foo, dispatcher.look_up('/foo/'))
-      assert_equal(Foo, dispatcher.look_up('/foo/something'))
+      assert_equal([ Foo, '' ],           dispatcher.look_up('/foo'))
+      assert_equal([ Foo, '/' ],          dispatcher.look_up('/foo/'))
+      assert_equal([ Foo, '/something' ], dispatcher.look_up('/foo/something'))
 
       assert_equal(nil, dispatcher.look_up('/bar'))
       assert_equal(nil, dispatcher.look_up('/bar/'))
